/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'application'
    id 'java-library'
    id 'maven-publish'
    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
    id("org.jetbrains.dokka") version "1.4.32"
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api 'org.json:json:20210307'
    testImplementation 'junit:junit:3.8.1'  
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

// ==================
//    Java Compiler
// ==================
tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:all" << "-Xlint:-options" << "-Xlint:-processing"
    options.encoding = 'UTF-8'
}

compileJava {
    options.compilerArgs << "-Werror"
}

// ==================
//    Tasks
// ==================

// Run sample app: 
// $ gradle run -q
application {
    mainClass = 'com.listennotes.podcast_api.Sample'
}

clean {
  delete fileTree(dir: 'src/' , include: '**/*.class')
}

jar {
    manifest {
        attributes("Implementation-Title": POM_NAME,
                   "Implementation-Version": VERSION_NAME,
                   "Implementation-Vendor": VENDOR_NAME,
                   "Bundle-SymbolicName": POM_ARTIFACT_ID,
                   "Export-Package": "com.listennotes.*")

        archiveVersion = VERSION_NAME
    }
}

apply from: "${rootDir}/scripts/publish-root.gradle"
